edited packnavmobile to fix overflow

--- a/src/components/css/PackNav.css
+++ b/src/components/css/PackNav.css
@@ -17,8 +17,6 @@
 }
 .PackNavMobile{
     position: absolute;
-    
-    width: 100%;
     height: max-content;
     text-align: center;
 
